--- a/_sass/_layouts.scss
+++ b/_sass/_layouts.scss
@@ -29,8 +29,6 @@
     @include media-query($on-laptop) {
         max-width: -webkit-calc(#{$wide-content-width} - (#{$spacing-unit}));
         max-width:         calc(#{$wide-content-width} - (#{$spacing-unit}));
-        padding-right: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
     }
 }
 
